// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно распарсить и обогатить параметры 1`] = `
Array [
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 2,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "test",
    "web_referer": "https://auto.ru/",
  },
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 2,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "test",
    "web_referer": "https://auto.ru/",
  },
]
`;

exports[`должен правильно распарсить и обогатить параметры, если параметры пришли массивом 1`] = `
Array [
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 2,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "test",
    "web_referer": "https://auto.ru/",
  },
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 2,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "test",
    "web_referer": "https://auto.ru/",
  },
]
`;

exports[`если utm-данные переданы в виде массива, должен привести их к строке 1`] = `
Array [
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 2,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "foo,bar",
    "web_referer": "https://auto.ru/",
  },
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 2,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "foo,bar",
    "web_referer": "https://auto.ru/",
  },
]
`;

exports[`при отсутствии данных об экспериментах, должен установить нулевой бакет 1`] = `
Array [
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 0,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "test",
    "web_referer": "https://auto.ru/",
  },
  Object {
    "card_show_event": Object {
      "app_version": "{{DEBIAN_VERSION}}",
      "card_from": "MORDA",
      "card_id": "1092301084-9f60cbba",
      "category": "CARS",
      "region_id": Array [
        213,
      ],
      "testing_group": 0,
    },
    "timestamp": "2019-12-23T13:39:04.479Z",
    "utm_content": "test",
    "web_referer": "https://auto.ru/",
  },
]
`;
